# aiodeu

./: .gitignore  Dockerfile  LICENSE  README.md  build_cython.py  cython_speed.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
aiodeu/: app.py  cetl.pyx  codecs.py  config.py  console.py  etl.py  logger.py  s3.py  utils.py
app/: consumer.py
consumer/: app.py  codecs.py  s3.py  utils.py
requirements/: base.txt  dev.txt
scripts/: print_schema.py
tests/: conftest.py  fixtures.py  mock_schema_registry_client.py  mock_server.py  test_aiodeu.py  test_app.py  test_codecs.py  test_cython.py
tests/data/: test.avsc  test.jsonl
