[tool.poetry]
name = "aiodeu"
version = "0.1.14"
description = "aio data engineering utils"
authors = ["Josh Rowe <s-block@users.noreply.github.com>"]
homepage = "https://github.com/s-block/aiodeu"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.57"
faust-streaming = "^0.8.5"
python-schema-registry-client = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
avro-python3 = "^1.10.1"
confluent-kafka = "^1.6.0"
flake8 = "^3.8.4"
moto = "^2.0.1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aiodeu = 'aiodeu.console:main'
