[tool.poetry]
name = "aiodeu"
version = "0.1.30"
description = "aio data engineering utils"
authors = ["Josh Rowe <s-block@users.noreply.github.com>"]
homepage = "https://github.com/s-block/aiodeu"
build = "build_cython.py"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
faust-streaming = { version = "0.10.3", extras = ["cython", "fast"], optional = true }
python-schema-registry-client = { version = "^2.4.1", optional = true }
boto3 = { version = "^1.26.20", optional = true }

[tool.poetry.extras]
faust = ["faust-streaming", "python-schema-registry-client"]
aws = ["boto3"]

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
moto = "^4.0.11"
pytest-asyncio = "^0.20.2"

[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
aiodeu = 'aiodeu.console:main'
